--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,13 +2,15 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Corne OLED Display
+# OLED Display and addons
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WPM=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
-# set the idle mode to 30 min
+# set the idle mode to 30 min in miliseconds
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
